dist/1.0/bin/sample/retrieveUnpackaged/objects/Funnel_30_days_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_in_Amount_converted__c</fullName>
        <label>Difference in Amount (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_Details__c</fullName>
        <label>Type Details</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Funnel 30 days Snapshot</label>
    <nameField>
        <label>Funnel 30 days Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funnel 30 days Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>